# TP-Taller-de-Programaci-n---Catedra-Deymonnaz

./: .gitignore  Arquitectura.drawio  Cargo.toml  README.md
.github/workflows/: ci.yml
cameras/: Cargo.toml
cameras/src/: lib.rs  main.rs  sistema.rs
cameras/src/estado/: mod.rs
cameras/src/interfaz/: comando.rs  mod.rs  respuesta.rs
drone/: Cargo.toml
drone/src/: lib.rs  main.rs
drone/src/dron/: bateria.rs  central.rs  desplazamiento.rs  estado.rs  mod.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/camara/: mod.rs
lib/src/configuracion/: mod.rs
lib/src/coordenadas/: mod.rs
lib/src/csv/: mod.rs
lib/src/incidente/: mod.rs
lib/src/parseador/: mensaje.rs  mod.rs  parametros_conectar.rs  parametros_info.rs  resultado_linea.rs
lib/src/serializables/: error.rs  guardar.rs  mod.rs
lib/src/stream/: mock.rs  mock_handler.rs  mod.rs
messaging-client/: Cargo.toml
messaging-client/src/cliente/: hilo_cliente.rs  instruccion.rs  mod.rs  publicacion.rs  suscripcion.rs
messaging-server/: Cargo.toml
messaging-server/src/: lib.rs  main.rs  servidor.rs
messaging-server/src/conexion/: id.rs  mod.rs  respuesta.rs  tick_contexto.rs
messaging-server/src/cuenta/: mod.rs
monitoring/: Cargo.toml
monitoring/src/: aplicacion.rs  lib.rs  main.rs
monitoring/src/accion/: accion_camara.rs  accion_dron.rs  accion_incidente.rs  listar.rs  mod.rs
monitoring/src/funcionamiento/: botones_mover_mapa.rs  coordenadas.rs  iconos.rs  mod.rs  plugins.rs  proveer_carto.rs  provider.rs
monitoring/src/sistema/: comando.rs  estado.rs  mod.rs
(+13 files in other folders)
