[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
messaging-client = { path = "../messaging-client" }
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = "0.27.2"
walkers = "0.22.0"
chrono = "0.4.38"
drone = { path = "../drone" }